<resources>
    <string name="app_name">Idée</string>

    <!--Auth-->
    <string name="login_facebook">login with Facebook</string>
    <string name="login_google">login with Google</string>

    <!--My Account-->
    <string name="create_board">create new board</string>
    <string name="user_no_name">Anonymous user</string>
    <string name="log_out">log out</string>

    <!--Board management-->
    <string name="create_board_title">create board</string>
    <string name="edit_board_title">edit board</string>
    <string name="board_name">board name</string>
    <string name="share_options">Share options</string>
    <string name="add_email_to_share">add e-mail to share</string>
    <string name="default_board_name">my ideas</string>
    <string name="unknown_user">Unknown user</string>
    <string name="email_address_to_share">e-mail address to share</string>
    <string name="is_not_shared">This board is not shared.\nAdd email addresses that you want to share with.</string>
    <string name="wrong_email">E-mail is not valid</string>
    <string name="board_options">Board options</string>
    <string name="delete_board">Delete board</string>
    <string name="leave_board">Leave board</string>
    <string name="role_unknown">unknown role</string>
    <string name="role_admin">admin</string>
    <string name="role_owner">owner</string>
    <string name="role_reader">reader</string>
    <string name="role_editor">editor</string>

    <!--Ideas-->
    <string name="select_board">Select a board to see ideas</string>
    <string name="hint_idea_name">Idea name</string>
    <string name="hint_idea_description">Description</string>
    <string name="ease">ease</string>
    <string name="impact">impact</string>
    <string name="confidence">confidence</string>
    <string name="create_idea">add new idea</string>
    <string name="edit_idea">edit idea</string>
    <string name="total_score">total score</string>
    <string name="sort">sort</string>
    <string name="shared">shared</string>
    <string name="shared_to_you">shared to you</string>
    <string name="not_shared">not shared</string>
    <string name="sort_by">Sort ideas by:</string>
    <string name="irreversible_action_title">Are you sure?</string>
    <string name="irreversible_action_message">This action is irreversible.</string>
    <string name="warning_board_deletion">Deleting board is irreversible. You and all invitees will loose access to all brilliant ideas defined in the board. Think twice before tapping OK button.</string>
    <string name="warning_board_leave">Leaving board is irreversible. To regain an access you will have to be invited again.</string>
    <string name="idea_deleted">Idea deleted</string>
    <string name="average_note">average note</string>

    <string-array name="sorting_options">
        <item>average note</item>
        <item>ease</item>
        <item>confidence</item>
        <item>impact</item>
    </string-array>

    <string-array name="ease_description">
        <item>you lazy bastard</item>
        <item>your grandma could do it</item>
        <item>easy-peasy</item>
        <item>piece of cake</item>
        <item>it ain\'t hard</item>
        <item>don\'t sweat too much</item>
        <item>it ain\'t easy</item>
        <item>no honey, no money</item>
        <item>no pain, no gain</item>
        <item>nobel prize level</item>
        <item>rocket science, bro</item>
    </string-array>

    <string-array name="confidence_description">
        <item>grow some balls</item>
        <item>seriously?</item>
        <item>don\'t quit your job yet</item>
        <item>you can do better</item>
        <item>we believe in you</item>
        <item>it will work (or not)</item>
        <item>you got it!</item>
        <item>that\'s a spirit</item>
        <item>that\'s what I\'m talking about</item>
        <item>like a boss</item>
        <item>fuck yeah!</item>
    </string-array>

    <string-array name="impact_description">
        <item>nobody cares</item>
        <item>not really a game-changer</item>
        <item>your mom will be proud</item>
        <item>useless but cool</item>
        <item>almost like this app</item>
        <item>so, so</item>
        <item>makes life easier</item>
        <item>that\'s an idea</item>
        <item>Elon has a competition</item>
        <item>Steve would be impressed</item>
        <item>once in a lifetime</item>
    </string-array>

    <!--Generic-->
    <string name="save">save</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="undo">undo</string>

    <!--Errors-->
    <string name="error_unknown">Something went wrong :(</string>
    <string name="error_firestore">Error accessing database</string>

    <!--Config-->
    <string name="facebook_app_id">2310649462278870</string>
    <string name="fb_login_protocol_scheme">fb2310649462278870</string>
    <string name="google_client_id">394685923584-o7a74m9rc93nlmonepjdg2nfuvbqogbo.apps.googleusercontent.com</string>

</resources>
