<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ideaNameWrapper"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <io.mindhouse.idee.ui.widget.ActionEditText
                android:id="@+id/ideaName"
                style="@style/EditText.Wrapped"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_idea_name"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine|textNoSuggestions|textCapSentences"
                android:textAppearance="@style/TextDefault.Header" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ideaDescriptionWrapper"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ideaNameWrapper">

            <EditText
                android:id="@+id/ideaDescription"
                style="@style/EditText.Wrapped"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_idea_description"
                android:inputType="textPersonName|textCapSentences|textMultiLine" />


        </android.support.design.widget.TextInputLayout>

        <SeekBar
            android:id="@+id/ease"
            android:layout_width="0dp"
            android:layout_height="@dimen/seek_bar_height_big"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:max="100"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/ease"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ideaDescriptionWrapper" />

        <TextView
            android:id="@+id/easeValue"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ease"
            app:layout_constraintStart_toStartOf="@+id/ease"
            app:layout_constraintTop_toTopOf="@+id/ease"
            tools:text="8" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/confidence"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ease" />

        <SeekBar
            android:id="@+id/confidence"
            android:layout_width="0dp"
            android:layout_height="@dimen/seek_bar_height_big"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:max="100"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/confidenceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/confidence"
            app:layout_constraintStart_toStartOf="@+id/confidence"
            app:layout_constraintTop_toTopOf="@+id/confidence"
            tools:text="10" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/impact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confidence" />

        <SeekBar
            android:id="@+id/impact"
            android:layout_width="0dp"
            android:layout_height="@dimen/seek_bar_height_big"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:max="100"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/impactValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/impact"
            app:layout_constraintStart_toStartOf="@+id/impact"
            app:layout_constraintTop_toTopOf="@+id/impact"
            tools:text="7" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalScoreValue" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/saveButton"
            app:layout_constraintEnd_toEndOf="@+id/saveButton"
            app:layout_constraintStart_toStartOf="@+id/saveButton"
            app:layout_constraintTop_toTopOf="@+id/saveButton" />

        <TextView
            android:id="@+id/easeDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextDefault.Small"
            app:layout_constraintBottom_toTopOf="@+id/ease"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="easy-peasy" />

        <TextView
            android:id="@+id/confidenceDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextDefault.Small"
            app:layout_constraintBottom_toTopOf="@+id/confidence"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="seriously?" />

        <TextView
            android:id="@+id/impactDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextDefault.Small"
            app:layout_constraintBottom_toTopOf="@+id/impact"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="nobody cares" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/total_score"
            android:textAppearance="@style/TextDefault.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/impact" />

        <TextView
            android:id="@+id/totalScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextDefault.Header"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="10" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>